--- a/src/assets/styles/components/_dashboard.scss
+++ b/src/assets/styles/components/_dashboard.scss
@@ -1,27 +1,96 @@
-@import '../base/globals';
+@import "../base/globals";
 
 .dashboard {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  .dashboard-content {
     display: flex;
+    gap: 2rem;
     width: 100%;
-    height: 100%;
-    .dashboard-content {
-      flex: 1;
-      padding: 0 1rem 0 1rem;
+    flex: 1;
+    padding: 0 1rem;
+
+    .content-column {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
     }
-  
-    .content {
-      &.latest {
-        background-color: $grayscale_f0f0f1;
-        h1 {
-          color: $brand_blue;
+
+    .sidebar-column {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      padding-top: 2.5rem;
+      .sidebar-container {
+        border: 2px solid $brand_blue;
+        border-radius: 8px;
+        padding: 1rem;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .sidebar-content {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 30%;
+          gap: 0.5rem;
+        }
+
+        .sidebar-title {
+          flex: 1;
+          height: 10px;
+          background-color: $brand_blue;
+        }
+
+        .sidebar-circle {
+          width: 18px;
+          height: 18px;
+          background-color: $brand_blue;
+          border-radius: 50%;
         }
       }
-      &.popular {
-        background-color: $grayscale_f0f0f1;
-        h1 {
-          color: $brand_blue;
+      .additional-content {
+        background-color: #2b4d6e;
+        border-radius: 8px;
+        padding: 1rem;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        height: 154px;
+        .additional-title {
+          margin-top: 1rem;
+          height: 20px;
+          background-color: #ffffff;
+          margin-bottom: 10px;
+          width: 90%;
+        }
+
+        .additional-bar {
+          height: 10px;
+          background-color: #ffffff;
+          width: 60%;
         }
       }
     }
   }
-  
+
+  .content {
+    &.latest {
+      background-color: $grayscale_f0f0f1;
+      h1 {
+        color: $brand_blue;
+      }
+    }
+
+    &.popular {
+      background-color: $grayscale_f0f0f1;
+      h1 {
+        color: $brand_blue;
+      }
+    }
+  }
+
+}
