--- a/src/assets/styles/components/_layout.scss
+++ b/src/assets/styles/components/_layout.scss
@@ -11,6 +11,13 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    width: 'calc(100vh - 100px)';
+  }
+
+  @media (max-width: $breakpoint-md) {
+    flex-direction: column;
+
+    .sidebar {
+      order: -1;
+    }
   }
 }
