--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -1,9 +1,18 @@
 $brand_corp: #242d38;
 $brand_blue: #304c70;
+$brand_blue_light: #7598C4;
 $grayscale_lightest: #ffffff;
 $grayscale_f0f0f1: #f0f0f1;
 $grayscale_dddef: #dddedf;
 $grayscale_49494f: #49494f;
 $grayscale_ECECF1: #ECECF1;
+$grayscale_A3A3A8: #A3A3A8;
+$grayscale_8C8D91: #8C8D91;
+$grayscale_F0F0F1: #F0F0F1;
 $highlight_E4871B: #e4871b;
 $font-family: "Roboto", sans-serif;
+
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
