--- a/src/assets/styles/components/_posts.scss
+++ b/src/assets/styles/components/_posts.scss
@@ -117,6 +117,7 @@
       }
 
       img {
+        display: flex;
         max-width: 100%;
         border-radius: 8px;
         margin-top: 1rem;
