--- a/src/assets/styles/components/_sidebar.scss
+++ b/src/assets/styles/components/_sidebar.scss
@@ -21,31 +21,59 @@
     margin: 0;
     margin-left: 46px;
     gap: 3px;
+    width: 255px;
     li {
-      margin: 1rem 0;
       height: 41px;
+      width: 100%;
 
-      a {
+      div {
         color: $grayscale_lightest;
         text-decoration: none;
-        &:hover {
-          text-decoration: underline;
-        }
+        width: 111px;
+        height: 10px;
+        background-color: $grayscale_lightest;
       }
     }
   }
-
-  @media (max-width: $breakpoint-md) {
-    position: fixed;
-    top: 0;
-    left: 0;
+  &.mobile {
     width: 100%;
     height: 55px;
-    z-index: 1000;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    padding: 20px;
+    justify-content: space-between;
+    padding: 0 20px;
+
+    .sidebar-logo {
+      margin-bottom: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+      margin-left: 0;
+      display: flex;
+      align-items: center;
+    }
+
+    .sidebar-links {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-left: 20px;
+      gap: 10px;
+      width: 80px;
+
+      li {
+        width: 20px;
+        margin-left: 0;
+        display: flex;
+        align-items: center;
+        
+        div {
+          width: 18px;
+          height: 18px;
+          background-color: $grayscale_49494f;
+          border-radius: 50%;
+        }
+      }
+    }
   }
 }
