--- a/src/assets/styles/components/_sidebar.scss
+++ b/src/assets/styles/components/_sidebar.scss
@@ -70,7 +70,7 @@
         div {
           width: 18px;
           height: 18px;
-          background-color: $grayscale_49494f;
+          background-color: $grayscale_lightest;
           border-radius: 50%;
         }
       }
